manifests/dev.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  
spec:
  selector:
    app: dev-pod
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
